--- a/assets/css/variables/_variables.scss
+++ b/assets/css/variables/_variables.scss
@@ -1,4 +1,5 @@
-$background-color:rgb(54, 27, 0);
+$background-color:#403a3c;
+$card-background-color:#585556;
 $main-color:orange;
 $text-color:#fff;
 $text-color-hover:rgb(162, 162, 162);
