--- a/assets/css/pages/_home.scss
+++ b/assets/css/pages/_home.scss
@@ -21,6 +21,10 @@ header{
         }
         .header-info{
             font-size: 24px;
+            img{
+                width: 60px;
+                height: 50px;
+            }
             &:first-child{
                 color: $main-color;
             }
@@ -30,6 +34,10 @@ header{
         }
         .mobile-logo{
             font-size: 20px;
+            img{
+                width: 60px;
+                height: 50px;
+            }
             color: $main-color;
         }
     }
@@ -67,10 +75,14 @@ main{
             .card{
                 position: relative;
                 height: 180px;
+                transition: all 0.5s;
                 background-color: rgba(51, 51, 51, 0.54);
                 &:hover{
                 background-color: rgba(51, 51, 51, 0.2);
                 cursor: pointer;
+                .card-text{
+                   color: #fff;
+                }
                 }
                 .card-background{
                     position: absolute;
@@ -85,6 +97,8 @@ main{
                 }
                 .card-text{
                     z-index: 1;
+                    color: rgb(181, 181, 181);
+                    transition: all 0.5s;
                 }
             }
         }
@@ -96,11 +110,13 @@ main{
         background-color: $background-color;
         width: 100% !important;
         .sales{
-            color: #fff;
+            color: rgb(213, 213, 213);
             .sale-component-active{
                 border-bottom: 2px solid $main-color !important;
+                color: #fff !important;
             }
             .sale-component{
+                cursor: pointer;
                 border-bottom: 2px solid rgb(157, 157, 157);
             }
         }
@@ -109,10 +125,30 @@ main{
         }
         .third-cards{
             .third-card{
+                a{
+                color: rgb(157, 157, 157);
+                text-decoration: none;
+                }
+                img{
+                    opacity: 0.7;
+                    transition: all 0.5s;
+                }
+                transition: all 0.4s;
                 .third-card-in{
                     background-color: $card-background-color;
+                    transition: all 0.4s;
                 }
-                
+                &:hover{
+                a{
+                    color: #fff;
+                }
+                img{
+                    opacity: 1;
+                }
+                .third-card-in{
+                    background-color: #878787;
+                }
+                }
             }
             .third-card-more{
                 a{
