--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,52 @@ header .header-background ul li a:hover {
   color: #a2a2a2;
 }
 
+header .header-background #catalog-nav {
+  position: relative;
+}
+
+header .header-background #catalog-nav #catalog-categories {
+  position: absolute;
+  top: 10;
+  left: 0;
+  background-color: #403a3c;
+  z-index: -200;
+  opacity: 0;
+  width: 200px;
+  height: 100px;
+  overflow-y: auto;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  /* Track */
+  /* Handle */
+  /* Handle on hover */
+  padding-left: 0 !important;
+}
+
+header .header-background #catalog-nav #catalog-categories::-webkit-scrollbar {
+  width: 10px;
+}
+
+header .header-background #catalog-nav #catalog-categories::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 5px grey;
+          box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+header .header-background #catalog-nav #catalog-categories::-webkit-scrollbar-thumb {
+  background: #fff;
+  border-radius: 10px;
+}
+
+header .header-background #catalog-nav #catalog-categories::-webkit-scrollbar-thumb:hover {
+  background: #fff;
+}
+
+header .header-background #catalog-nav .catalog-hover {
+  z-index: 200 !important;
+  opacity: 1 !important;
+}
+
 header .header-background .header-info {
   font-size: 24px;
 }
